--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-		"Droid Sans", "Helvetica Neue", sans-serif;
+	font-family: 'Liu Jian Mao Cao', cursive;
+	background: url("./front-end/app-pages/background-cover.jpg");
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
